# SportsPerformanceAI

./: README.md  app.py  pyproject.toml  requirements.txt  requirements_list.txt
.streamlit/: config.toml
attached_assets/: 2025-04-26T01-37_export.csv
data/: example_metrics.csv  kb_sports_science.csv  synthetic_performance_data.csv
docs/: api_documentation.md  architecture.md  development_guide.md  documentation.md  user_guide.md
tests/: test_data_processor.py  test_database.py  test_image_analyzer.py  test_rag_system.py  test_recommendation_engine.py
utils/: data_processor.py  database.py  image_analyzer.py  rag_system.py  recommendation_engine.py  synthetic_data_generator.py  visualization.py
